# carl_bot

./: .travis.yml  AUTHORS.md  README.md  package.xml
carl_bot/: CHANGELOG.rst  CMakeLists.txt  package.xml
carl_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
carl_bringup/config/camera_info/: depth_PS1080_PrimeSense.yaml  rgb_PS1080_PrimeSense.yaml
carl_bringup/launch/: arm.launch  base.launch  carl_bringup.launch  carl_grasp_collection.launch  carl_grasp_collection_frontend.launch  carl_recognition.launch  grasp_collection.launch  minimal.launch  robot_model.launch  segway.launch  sensors.launch  view.launch
carl_bringup/rviz/: carl_grasp_collection_frontend.rviz  view_robot.rviz
carl_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
carl_description/cad/: 23286-00001.sldprt  ArmMountHoriz.sldprt  BaseCornerBracket.SLDPRT  Battery Holder Brace.SLDPRT  CasterAssembly.sldprt  Finger proximal phalanx.sldprt  Link - base - assembly.sldprt  Link - wrist - assembly.sldprt  RMP_Powerbase.sldprt  SegwayBattery.sldprt  TableSupport.SLDPRT  cornerBracket8_32.SLDPRT  tempPlate.SLDPRT  tempSwivelBase.SLDPRT
carl_description/cad/solidworks/: 23172-00001.sldprt  Actuator - large.sldprt  Actuator - small.sldprt  ArmArcVert.sldprt  BackOuterBracket.SLDPRT  Battery.SLDPRT  Computer Case.SLDPRT  Finger distal phalanx_rapid_prototype_version.sldprt  FrontCover.SLDPRT  FrontOuterBracket.SLDPRT  GearBox_NoSpacer.sldprt  JacoArmArc.SLDPRT  Link - arm - assembly.sldprt  Link - forearm - assembly.sldprt  Link - shoulder - assembly.sldprt  RearVerticalStrut.SLDPRT  Ring cover - large.sldprt  Ring cover - small.sldprt  StandardWheel.sldprt  SuperStructure.SLDASM  TempVerticle.SLDPRT  Vertical Upright.SLDPRT  armBoltMount.SLDPRT  armMountBracket.SLDPRT  backTableSupport.SLDPRT  batteryBracket.SLDPRT  centerCrossBeam.SLDPRT  centerCrossX.SLDASM  (+7 more)
carl_description/launch/: carl_description.launch  view.launch  view_robot.launch
carl_description/meshes/: Base.dae  CameraLift.dae  CameraPlate.dae  Caster.dae  CasterPlate.dae  FrontCoverCollision.STL  FullRobot - Battery-1.STL  FullRobot - Computer Case-1.STL  FullRobot - FrontCover-1.STL  FullRobot - Jaco - simplified-1 Actuator - large-1.STL  FullRobot - Jaco - simplified-1 Actuator - large-2.STL  FullRobot - Jaco - simplified-1 Actuator - large-3.STL  FullRobot - Jaco - simplified-1 Actuator - small-1.STL  FullRobot - Jaco - simplified-1 Actuator - small-2.STL  FullRobot - Jaco - simplified-1 Actuator - small-3.STL  FullRobot - Jaco - simplified-1 Finger distal phalanx_rapid_prototype_version-1.STL  FullRobot - Jaco - simplified-1 Finger distal phalanx_rapid_prototype_version-2.STL  FullRobot - Jaco - simplified-1 Finger distal phalanx_rapid_prototype_version-3.STL  FullRobot - Jaco - simplified-1 Finger proximal phalanx-1.STL  FullRobot - Jaco - simplified-1 Finger proximal phalanx-2.STL  FullRobot - Jaco - simplified-1 Finger proximal phalanx-3.STL  FullRobot - Jaco - simplified-1 Link - arm - assembly-1.STL  FullRobot - Jaco - simplified-1 Link - base - assembly-1.STL  FullRobot - Jaco - simplified-1 Link - forearm - assembly-1.STL  FullRobot - Jaco - simplified-1 Link - shoulder - assembly-1.STL  FullRobot - Jaco - simplified-1 Link - wrist - assembly-1.STL  FullRobot - Jaco - simplified-1 Link - wrist - assembly-2.STL  FullRobot - Jaco - simplified-1 Ring cover - large-1.STL  FullRobot - Jaco - simplified-1 Ring cover - large-2.STL  FullRobot - Jaco - simplified-1 Ring cover - large-3.STL  FullRobot - Jaco - simplified-1 Ring cover - small-1.STL  FullRobot - Jaco - simplified-1 Ring cover - small-2.STL  FullRobot - Jaco - simplified-1 Ring cover - small-3.STL  FullRobot - RMP_210-1 23172-00001-1.STL  FullRobot - RMP_210-1 23172-00001-2.STL  FullRobot - RMP_210-1 23286-00001-1.STL  FullRobot - RMP_210-1 23286-00001-2.STL  FullRobot - RMP_210-1 CasterAssembly-1.STL  FullRobot - RMP_210-1 GearBox_NoSpacer-1.STL  FullRobot - RMP_210-1 GearBox_NoSpacer-2.STL  (+158 more)
carl_description/robots/: carl.urdf  carl.urdf.xacro
carl_description/rviz/: view_robot.rviz
carl_description/scripts/: minify.bash
carl_description/urdf/: carl.urdf  carl.xacro
carl_dynamixel/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  back_servos.yaml  package.xml
carl_dynamixel/config/: back_servos.yaml  carl.yaml  creative.yaml  front_servos.yaml
carl_dynamixel/launch/: carl_dynamixel.launch  carl_servos.launch  test_param.launch
carl_dynamixel/src/: back_joint_node.cpp  front_joint_node.cpp  servo_pan_tilt.cpp
carl_dynamixel/srv/: LookAtPoint.srv
carl_interactive_manipulation/: CHANGELOG.rst  CMakeLists.txt  package.xml
carl_interactive_manipulation/launch/: im_frontend.launch
carl_interactive_manipulation/rviz/: im_frontend.rviz
carl_interactive_manipulation/src/: carl_interactive_manipulation.cpp  create_parking_spots.cpp  create_parking_spots.hpp
carl_nav/: CMakeLists.txt  package.xml
carl_nav/cfg/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_costmap_params_with_vo.yaml
carl_nav/launch/: gmapping.launch  gnavigation.launch  navigation.launch  navigation_with_vo.launch  odometry.launch  view_nav.launch
carl_nav/rviz/: amcl.rviz  gmapping.rviz  view_nav.rviz
carl_nav/src/: odom_covariance_converter.cpp  odom_covarience_converter.cpp  virtual_fence.cpp
carl_phidgets/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
carl_phidgets/launch/: imu.launch
carl_phidgets/src/: imu.cpp  imu_ros_i.cpp  orientation_filter.cpp  phidget.cpp  phidgets_imu_node.cpp  phidgets_imu_nodelet.cpp
carl_teleop/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
carl_teleop/launch/: carl_joy_teleop.launch  carl_joy_teleop_with_safety.launch
carl_teleop/src/: carl_joy_teleop.cpp  carl_key_teleop.cpp
carl_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
carl_tools/config/: view_calibration.rviz
carl_tools/launch/: camera_external_calibration.launch  view_calibration.launch
carl_tools/src/: camera_external_calibration.cpp  current_logger.cpp
(+125 files in other folders)
