 <package>
  <name>carl_bot</name>
  <version>0.0.0</version>
  <description>Metapackage for CARL (Crowdsourcing for Autonomous Robot Learning)</description>

  <maintainer email="spkordell@wpi.edu">Steven Kordell</maintainer>
  <author email="spkordell@wpi.edu">Steven Kordell</author>
  <author email="rctoris@wpi.edu">Russell Toris</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/carl_bot</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/carl_bot/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/carl_bot</url>
 
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>carl_description</run_depend>
  <run_depend>carl_teleop</run_depend>
  <run_depend>carl_bringup</run_depend>
  
  <export>
    <metapackage />
  </export>
  
</package>
