 <package>
  <name>carl_bot</name>
  <version>0.0.0</version>
  <description>Metapackage for CARL (Crowdsourcing for Autonomous Robot Learning) Robot</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <maintainer email="davidkent@wpi.edu">David Kent</maintainer>
  <author email="spkordell@wpi.edu">Steven Kordell</author>
  <author email="cmdunkers@wpi.edu">Chris Dunkers</author>
  <author email="rctoris@wpi.edu">Russell Toris</author>
  <author email="davidkent@wpi.edu">David Kent</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/carl_bot</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/carl_bot/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/carl_bot</url>
 
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>carl_bringup</run_depend>
  <run_depend>carl_description</run_depend>
  <run_depend>carl_teleop</run_depend>
  <run_depend>carl_nav</run_depend>
  
  <export>
    <metapackage />
  </export>
</package>
