<?xml version="1.0"?>
<package>
  <name>carl_bringup</name>
  <version>0.0.0</version>
  <description>Package containing bringup launch files for carl.</description>

  <maintainer email="spkordell@wpi.edu">Steven Kordell</maintainer>
  <author email="spkordell@wpi.edu">Steven Kordell</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/carl_bringup</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/carl_bot/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/carl_bot</url>
 
  <buildtool_depend>catkin</buildtool_depend>
</package>
