<?xml version="1.0"?>
<package>
  <name>carl_bringup</name>
  <version>0.0.26</version>
  <description>CARL Bringup Launch Scripts</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <maintainer email="davidkent@wpi.edu">David Kent</maintainer>
  <author email="spkordell@wpi.edu">Steven Kordell</author>
  <author email="rctoris@wpi.edu">Russell Toris</author>
  <author email="davidkent@wpi.edu">David Kent</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/carl_bringup</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/carl_bot/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/carl_bot</url>
 
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- ROBOT MODEL -->
  <run_depend>carl_description</run_depend>
  
  <!-- SENSORS -->
  <run_depend>carl_dynamixel</run_depend>
  <run_depend>m4atx_battery_monitor</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>urg_node</run_depend>
  
  <!-- SEGWAY -->
  <run_depend>ros_ethernet_rmp</run_depend>

  <!-- JACO -->
  <run_depend>wpi_jaco_wrapper</run_depend>
  
  <!-- CARL -->
  <run_depend>carl_teleop</run_depend>
  <run_depend>carl_interactive_manipulation</run_depend>
  <run_depend>carl_safety</run_depend>
  <run_depend>carl_moveit</run_depend>

  <!-- MISC -->
  <run_depend>rail_segmentation</run_depend>
  <run_depend>rail_recognition</run_depend>
  <run_depend>rail_pick_and_place_tools</run_depend>
</package>
