<?xml version="1.0"?>
<package>
  <name>carl_interactive_manipulation</name>
  <version>0.0.34</version>
  <description>Interactive Manipulation for CARL</description>

  <author email="dekent@gatech.edu">David Kent</author>
  <author email="pdmitrano@wpi.edu">Peter Mitrano</author>
  <maintainer email="dekent@gatech.edu">David Kent</maintainer>

  <url type="website">http://ros.org/wiki/carl_bot</url>
  <url type="bugtracker">https://github.com/GT-RAIL/carl_bot/issues</url>
  <url type="repository">https://github.com/GT-RAIL/carl_bot</url>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib</build_depend>
  <build_depend>carl_moveit</build_depend>
  <build_depend>carl_safety</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>rail_pick_and_place_msgs</build_depend>
  <build_depend>rail_segmentation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>wpi_jaco_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>carl_moveit</run_depend>
  <run_depend>carl_safety</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>rail_pick_and_place_msgs</run_depend>
  <run_depend>rail_segmentation</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>wpi_jaco_msgs</run_depend>

</package>
