<package>
  <name>carl_phidgets</name>
  <version>0.0.16</version>
  <description>ROS Support for the Phidgets Spatial 3/3/3 Devices for use with the CARL Robot</description>
  
  <maintainer email="davidkent@wpi.edu">David Kent </maintainer>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="davidkent@wpi.edu">David Kent</author>
  <author email="rctoris@wpi.edu">Russell Toris</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/carl_phidgets</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/carl_bot/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/carl_bot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>libphidgets</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>libphidgets</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
</package>
